--- a/src/features/locations/components/Locations/styles.module.css
+++ b/src/features/locations/components/Locations/styles.module.css
@@ -9,7 +9,7 @@
 .container {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 var(--spacing-lg);
   display: flex;
   flex-direction: column;
 }
